ocellus working against z3

--- a/dev/index.html
+++ b/dev/index.html
@@ -48,14 +48,14 @@
             <input type="button" name="communitiesChooser" value="⬇︎">
             <input type="text" name="q" placeholder="search for something…" class="nudge"> 
             <input type="reset" name="reset" value="✖︎">
-            <input type="checkbox" name="refreshCache" value="true"> 
-            <input type="hidden" name="size" value="30">
-            <input type="hidden" name="page" value="1">
+            <input type="checkbox" name="$refreshCache" value="true"> 
+            <input type="hidden" name="$size" value="30">
+            <input type="hidden" name="$page" value="1">
             <input type="button" name="submit" value="GO">
         </fieldset>
         <div id="throbber" class="nothrob"></div>
 
-        <div id="refreshCache" class="hidden-block warning">This’ll refresh the cache… probably not what you want</div>
+        <div id="$refreshCache" class="hidden-block warning">This’ll refresh the cache… probably not what you want</div>
 
         <fieldset id="communitiesChooser" class="hidden-none">
             <legend>Communities</legend>
