--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="version" content="4.0">
     <meta name="author" content="Puneet Kishor">
     <meta name="copyright" content="CC0 Public Domain Dedication">
-    <meta name="date" content="Fri Dec 25 2020 12:37:42 GMT+0530 (India Standard Time)">
+    <meta name="date" content="Fri Jan 07 2022 20:18:02 GMT+0100 (Central European Standard Time)">
 
     <meta http-equiv="Cache-Control" content="max-age=604800, public">
     
@@ -40,14 +40,14 @@
             <input type="button" name="communitiesChooser" value="⬇︎">
             <input type="text" name="q" placeholder="search for something…" class="nudge"> 
             <input type="reset" name="reset" value="✖︎">
-            <input type="checkbox" name="refreshCache" value="true"> 
-            <input type="hidden" name="size" value="30">
-            <input type="hidden" name="page" value="1">
+            <input type="checkbox" name="$refreshCache" value="true"> 
+            <input type="hidden" name="$size" value="30">
+            <input type="hidden" name="$page" value="1">
             <input type="button" name="submit" value="GO">
         </fieldset>
         <div id="throbber" class="nothrob"></div>
 
-        <div id="refreshCache" class="hidden-block warning">This’ll refresh the cache… probably not what you want</div>
+        <div id="$refreshCache" class="hidden-block warning">This’ll refresh the cache… probably not what you want</div>
 
         <fieldset id="communitiesChooser" class="hidden-none">
             <legend>Communities</legend>
