--- a/4t.html
+++ b/4t.html
@@ -6,7 +6,7 @@
     <meta name="version" content="4.0T">
     <meta name="author" content="Puneet Kishor">
     <meta name="copyright" content="CC0 Public Domain Dedication">
-    <meta name="date" content="Fri Dec 25 2020 12:37:42 GMT+0530 (India Standard Time)">
+    <meta name="date" content="Fri Jan 07 2022 20:18:02 GMT+0100 (Central European Standard Time)">
 
     <meta http-equiv="Cache-Control" content="max-age=604800, public">
 
