removed $ from non-column params

--- a/4t.html
+++ b/4t.html
@@ -6,7 +6,7 @@
     <meta name="version" content="4.0T">
     <meta name="author" content="Puneet Kishor">
     <meta name="copyright" content="CC0 Public Domain Dedication">
-    <meta name="date" content="Fri Jan 07 2022 20:41:41 GMT+0100 (Central European Standard Time)">
+    <meta name="date" content="Sun Jan 09 2022 19:30:30 GMT+0100 (Central European Standard Time)">
 
     <meta http-equiv="Cache-Control" content="max-age=604800, public">
 
@@ -59,9 +59,14 @@
             </div>
             
             <div id="palette"></div>
+            <div id="hidden-figures"></div>
             
             <div id="results">
-                <table>
+                <div id="search-results"></div>
+                <div id="treatments-pager" class="pager"></div>
+                <div id="figures-pager" class="pager"></div>
+
+                <!-- <table>
                     <thead>
                         <tr>
                             <td colspan="10" style="text-align: center; padding-bottom: 1rem;">
@@ -74,7 +79,7 @@
                         <tr id="treatments-pager" class="pager"></tr>
                         <tr id="figures-pager" class="pager"></tr>
                     </tbody>
-                </table>
+                </table> -->
             </div>
 
             <!-- this is where the figures go -->
