--- a/dev/4t.html
+++ b/dev/4t.html
@@ -69,9 +69,14 @@
             </div>
             
             <div id="palette"></div>
+            <div id="hidden-figures"></div>
             
             <div id="results">
-                <table>
+                <div id="search-results"></div>
+                <div id="treatments-pager" class="pager"></div>
+                <div id="figures-pager" class="pager"></div>
+
+                <!-- <table>
                     <thead>
                         <tr>
                             <td colspan="10" style="text-align: center; padding-bottom: 1rem;">
@@ -84,7 +89,7 @@
                         <tr id="treatments-pager" class="pager"></tr>
                         <tr id="figures-pager" class="pager"></tr>
                     </tbody>
-                </table>
+                </table> -->
             </div>
 
             <!-- this is where the figures go -->
