separate globals into O.globals.js

--- a/dev/4t.html
+++ b/dev/4t.html
@@ -149,6 +149,7 @@
 <script src="../libs/lazysizes.min.js"></script>
 
 <!-- build:js -->
+<script src="js/o4-globals.js"></script>
 <script src="js/o4t-ng.js"></script>
 <script src="js/o4t-pager.js"></script>
 <!-- endbuild -->
