--- a/dev/index.html
+++ b/dev/index.html
@@ -395,6 +395,7 @@
 <script src="../libs/JavaScript-autoComplete/auto-complete.min.js"></script>
 
 <!-- build:js -->
+<script src="js/o4-globals.js"></script>
 <script src="js/o4-base.js"></script>
 <script src="js/o4-utils.js"></script>
 <!-- endbuild -->
