--- a/map.html
+++ b/map.html
@@ -7,7 +7,7 @@
     <meta name="version" content="4.0T">
     <meta name="author" content="Puneet Kishor">
     <meta name="copyright" content="CC0 Public Domain Dedication">
-    <meta name="date" content="Fri Jan 14 2022 10:50:47 GMT+0100 (Central European Standard Time)">
+    <meta name="date" content="Sun Jan 16 2022 23:40:28 GMT+0100 (Central European Standard Time)">
     <meta http-equiv="Cache-Control" content="max-age=604800, public">
 
     <title>ocellus^4M</title>
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css">
+    <!-- <link rel="stylesheet" href="/bower_components/rrose/leaflet.rrose.css"> -->
   </head>
   <body>
     <div class="box">
@@ -60,10 +61,13 @@
     <!-- Make sure you put this AFTER Leaflet's CSS -->
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
     <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
-    <script src="../node_modules/leaflet.heat/dist/leaflet-heat.js"></script>
+    <!-- <script src="/node_modules/leaflet.heat/dist/leaflet-heat.js"></script> -->
+    <!-- <script src="/bower_components/rrose/leaflet.rrose-src.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/@turf/turf@6/turf.min.js"></script>
     <!-- <script src="//api.tiles.mapbox.com/mapbox.js/plugins/turf/v2.0.0/turf.min.js"></script> -->
-    <script src="https://unpkg.com/h3-js"></script>
+    <!-- <script src="https://unpkg.com/h3-js"></script> -->
+    <script src=" https://unpkg.com/h3-js@3.7.2/dist/h3-js.umd.js"></script>
+   
 
     <script src="js/o4m.min.js"></script>
 
