working version of i.html but without gulp

--- a/dev/4t.html
+++ b/dev/4t.html
@@ -32,7 +32,7 @@
 
 <body>
 <header>
-    <div id="brand">4TREATMENTS</div>
+    <div id="brand">TREATMENTS</div>
     <div class="title">
         <h1>ocellus</h1>
         <small>A Plazi Project</small><br>
@@ -143,7 +143,6 @@
 </main>
 
 <footer><img src="../img/fish.jpg"></footer>
-
 <script src="/node_modules/picolog/dist/picolog.min.js"></script>
 <script src="/js/config.js"></script>
 <script src="../libs/lazysizes.min.js"></script>
@@ -155,9 +154,9 @@
 <!-- endbuild -->
 
 <script>
-window.onload = function() {
-    init()
-}
+    window.onload = function() {
+        init()
+    }
 </script>
 </body>
 </html>
