rolled up rollup into gulp

--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
     <meta name="description" content="Ocellus, an explorer for the Biodiversity Literature Repository (BLR) on Zenodo">
     <meta name="version" content="4.0">
     <meta name="author" content="Puneet Kishor">
-    <meta name="copyright" content="CC0 Public Domain Dedication">
-    <meta name="date" content="Fri Feb 11 2022 12:07:43 GMT+0100 (Central European Standard Time)">
+    <meta name="copyright" content="Puneet Kishor">
+    <meta name="license" content="CC0 Public Domain Dedication">
+    <meta name="repo" content="https://github.com/punkish/ocellus">
+    <meta name="date" content="Fri Feb 11 2022 12:50:43 GMT+0100 (Central European Standard Time)">
     <meta http-equiv="Cache-Control" content="max-age=604800, public">
-    <title>ocellus^4</title>
-    <link rel="icon" type="image/png" href="/img/ocellus.png">
-    <link rel="stylesheet" href="/css/uglyduck.css">
-    
-    <link rel="stylesheet" href="/css/ocellus.min.css">
 
+    <title>ocellus^4</title>
+
+    <link rel="icon" type="image/png" href="/img/ocellus.png">
+
+    <link rel="stylesheet" href="/css/uglyduck.css">
+    <link rel="stylesheet" href="/css/ocellus.min.css">
     <link rel="stylesheet" href="/node_modules/@sn8z/pop-pop.css/dist/pop-pop.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css">
@@ -120,15 +123,12 @@
         <img src="/img/fish.jpg">
     </footer>
     
-
     <script src="/js/config.js"></script>
-
     <script src="/node_modules/picolog/dist/picolog.min.js"></script>
     <script src="/libs/lazysizes.min.js"></script>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
     <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
     <script src="https://unpkg.com/h3-js@3.7.2/dist/h3-js.umd.js"></script>
-
     <script type="module">
         import { init } from './js/ocellus.js';
         window.onload = () => init();
