--- a/dev/index.html
+++ b/dev/index.html
@@ -68,7 +68,19 @@
             <div id="refreshCacheMsg" class="hidden">This will refresh the cache. You probably don’t want to do this.</div>
             <input id="page" type="hidden" value="1">
             <input id="size" type="hidden" value="30">
+            <div id="help">example searches</div>
+            <div class="examples hidden">
+                <details>
+                    <summary>shrimp&publicationDate=since(2020-12-21)</summary>
+                    <p class="example-desc">text contains 'shrimp' in articles published since 2020-12-21 <button class="example-insert">insert</button></p>
+                </details>
+                <details>
+                    <summary>checkinTime=since(2022-02-10)</summary>
+                    <p class="example-desc">images from treatments checked in since yesterday <button class="example-insert">insert</button></p>
+                </details>
+            </div>
         </form>
+        
     </header>
     <div id="throbber" class="nothrob"></div>
 
