added trex example

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="copyright" content="Puneet Kishor">
     <meta name="license" content="CC0 Public Domain Dedication">
     <meta name="repo" content="https://github.com/punkish/ocellus">
-    <meta name="date" content="Fri Feb 11 2022 17:23:23 GMT+0100 (Central European Standard Time)">
+    <meta name="date" content="Fri Feb 11 2022 18:58:37 GMT+0100 (Central European Standard Time)">
     <meta http-equiv="Cache-Control" content="max-age=604800, public">
 
     <title>ocellus^4</title>
@@ -62,11 +62,15 @@
             <div class="examples hidden">
                 <details>
                     <summary>shrimp&publicationDate=since(2020-12-21)</summary>
-                    <p class="example-desc">text contains 'shrimp' in articles published since 2020-12-21 <button class="example-insert">insert</button></p>
+                    <p class="example-desc">text contains 'shrimp' in articles published since 2020-12-21 <button class="example-insert">search</button></p>
                 </details>
                 <details>
                     <summary>checkinTime=since(2022-02-10)</summary>
-                    <p class="example-desc">images from treatments checked in since yesterday <button class="example-insert">insert</button></p>
+                    <p class="example-desc">images from treatments checked in since yesterday <button class="example-insert">search</button></p>
+                </details>
+                <details>
+                    <summary>tyrannosaurus&authorityName=Osborn</summary>
+                    <p class="example-desc">text contains 'tyrannosaurus' and <i>authorityName</i> starts with 'Osborn' <button class="example-insert">search</button></p>
                 </details>
             </div>
         </form>
