added glowing effect to button after example search insert

--- a/dev/index.html
+++ b/dev/index.html
@@ -72,15 +72,15 @@
             <div class="examples hidden">
                 <details>
                     <summary>shrimp&publicationDate=since(2020-12-21)</summary>
-                    <p class="example-desc">text contains 'shrimp' in articles published since 2020-12-21 <button class="example-insert">search</button></p>
+                    <p class="example-desc">text contains 'shrimp' in articles published since 2020-12-21 <button class="example-insert">try this search</button></p>
                 </details>
                 <details>
                     <summary>checkinTime=since(2022-02-10)</summary>
-                    <p class="example-desc">images from treatments checked in since yesterday <button class="example-insert">search</button></p>
+                    <p class="example-desc">images from treatments checked in since yesterday <button class="example-insert">try this search</button></p>
                 </details>
                 <details>
                     <summary>tyrannosaurus&authorityName=Osborn</summary>
-                    <p class="example-desc">text contains 'tyrannosaurus' and <i>authorityName</i> starts with 'Osborn' <button class="example-insert">search</button></p>
+                    <p class="example-desc">text contains 'tyrannosaurus' and <i>authorityName</i> starts with 'Osborn' <button class="example-insert">try this search</button></p>
                 </details>
             </div>
         </form>
