changed T to treatmentId in images

--- a/dev/index.html
+++ b/dev/index.html
@@ -70,7 +70,7 @@
             <input id="size" type="hidden" value="30">
             <div id="help">example searches</div>
             <div class="examples hidden">
-                <div>Note: these example queries with extended syntax are currently only possible against treatments</div>
+                <div><b>Note:</b> these example queries with extended syntax are currently only possible against treatments</div>
                 <details>
                     <summary>shrimp&publicationDate=since(2020-12-21)</summary>
                     <p class="example-desc">text contains 'shrimp' in articles published since 2020-12-21 <button class="example-insert">try this search</button></p>
