--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="copyright" content="Puneet Kishor">
     <meta name="license" content="CC0 Public Domain Dedication">
     <meta name="repo" content="https://github.com/punkish/ocellus">
-    <meta name="date" content="Fri Feb 11 2022 19:55:49 GMT+0100 (Central European Standard Time)">
+    <meta name="date" content="Fri Feb 11 2022 20:17:08 GMT+0100 (Central European Standard Time)">
     <meta http-equiv="Cache-Control" content="max-age=604800, public">
 
     <title>ocellus^4</title>
@@ -60,7 +60,7 @@
             <input id="size" type="hidden" value="30">
             <div id="help">example searches</div>
             <div class="examples hidden">
-                <div>Note: these example queries with extended syntax are currently only possible against treatments</div>
+                <div><b>Note:</b> these example queries with extended syntax are currently only possible against treatments</div>
                 <details>
                     <summary>shrimp&publicationDate=since(2020-12-21)</summary>
                     <p class="example-desc">text contains 'shrimp' in articles published since 2020-12-21 <button class="example-insert">try this search</button></p>
