added treatmentId with reveal effect to images from treatments

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="copyright" content="Puneet Kishor">
     <meta name="license" content="CC0 Public Domain Dedication">
     <meta name="repo" content="https://github.com/punkish/ocellus">
-    <meta name="date" content="Fri Feb 11 2022 20:17:08 GMT+0100 (Central European Standard Time)">
+    <meta name="date" content="Sat Feb 12 2022 12:54:59 GMT+0100 (Central European Standard Time)">
     <meta http-equiv="Cache-Control" content="max-age=604800, public">
 
     <title>ocellus^4</title>
@@ -26,7 +26,7 @@
   <body>
     
     <header>
-        <div id="brand">4</div>
+        <div id="brand" class="reveal" data-reveal="MAP • IMAGES • TREATMENTS">4</div>
         <div class="title">
             <h1>ocellus</h1>
             <small>A Plazi Project</small><br>
