--- a/dev/index.html
+++ b/dev/index.html
@@ -36,7 +36,7 @@
   <body>
     
     <header>
-        <div id="brand">4</div>
+        <div id="brand" class="reveal" data-reveal="MAP • IMAGES • TREATMENTS">4</div>
         <div class="title">
             <h1>ocellus</h1>
             <small>A Plazi Project</small><br>
