added 'yesterday' as a date option

--- a/dev/index.html
+++ b/dev/index.html
@@ -76,7 +76,7 @@
                     <p class="example-desc">text contains 'shrimp' in articles published since 2020-12-21 <button class="example-insert">try this search</button></p>
                 </details>
                 <details>
-                    <summary>checkinTime=since(2022-02-10)</summary>
+                    <summary>checkinTime=since(yesterday)</summary>
                     <p class="example-desc">images from treatments checked in since yesterday <button class="example-insert">try this search</button></p>
                 </details>
                 <details>
