--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="copyright" content="Puneet Kishor">
     <meta name="license" content="CC0 Public Domain Dedication">
     <meta name="repo" content="https://github.com/punkish/ocellus">
-    <meta name="date" content="Sun Feb 20 2022 21:46:30 GMT+0100 (Central European Standard Time)">
+    <meta name="date" content="Mon Feb 21 2022 10:37:35 GMT+0100 (Central European Standard Time)">
     <meta http-equiv="Cache-Control" content="max-age=604800, public">
 
     <title>ocellus^4</title>
@@ -66,7 +66,7 @@
                     <p class="example-desc">text contains 'shrimp' in articles published since 2020-12-21 <button class="example-insert">try this search</button></p>
                 </details>
                 <details>
-                    <summary>checkinTime=since(2022-02-10)</summary>
+                    <summary>checkinTime=since(yesterday)</summary>
                     <p class="example-desc">images from treatments checked in since yesterday <button class="example-insert">try this search</button></p>
                 </details>
                 <details>
