added a workaround for http 429

--- a/dev/index.html
+++ b/dev/index.html
@@ -97,7 +97,7 @@
                 <div id="search-criteria"></div>
 
                 <!-- this is where the images go -->
-                <div id="grid-images" class="columns"></div>
+                <div id="grid-images"></div>
                 <div id="pager"></div>
             </div>
         </section>
