--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="copyright" content="Puneet Kishor">
     <meta name="license" content="CC0 Public Domain Dedication">
     <meta name="repo" content="https://github.com/punkish/ocellus">
-    <meta name="date" content="Wed Mar 02 2022 18:14:08 GMT+0100 (Central European Standard Time)">
+    <meta name="date" content="Thu Mar 03 2022 14:51:59 GMT+0100 (Central European Standard Time)">
     <meta http-equiv="Cache-Control" content="max-age=604800, public">
 
     <title>ocellus^4</title>
@@ -87,7 +87,7 @@
                 <div id="search-criteria"></div>
 
                 <!-- this is where the images go -->
-                <div id="grid-images" class="columns"></div>
+                <div id="grid-images"></div>
                 <div id="pager"></div>
             </div>
         </section>
