added grid query param to control size of the grid

--- a/dev/index.html
+++ b/dev/index.html
@@ -69,6 +69,7 @@
             <div id="refreshCacheMsg" class="hidden">This will refresh the cache. You probably don’t want to do this.</div>
             <input id="page" type="hidden" value="1">
             <input id="size" type="hidden" value="30">
+            <input id="grid" type="hidden" value="large">
             <div id="search-help">example searches</div>
             <div class="examples hidden">
                 <div><b>Note:</b> these example queries with extended syntax are currently only possible against treatments</div>
