--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="copyright" content="Puneet Kishor">
     <meta name="license" content="CC0 Public Domain Dedication">
     <meta name="repo" content="https://github.com/punkish/ocellus">
-    <meta name="date" content="Thu Mar 03 2022 14:51:59 GMT+0100 (Central European Standard Time)">
+    <meta name="date" content="Thu Mar 03 2022 15:02:35 GMT+0100 (Central European Standard Time)">
     <meta http-equiv="Cache-Control" content="max-age=604800, public">
 
     <title>ocellus^4</title>
@@ -59,6 +59,7 @@
             <div id="refreshCacheMsg" class="hidden">This will refresh the cache. You probably don’t want to do this.</div>
             <input id="page" type="hidden" value="1">
             <input id="size" type="hidden" value="30">
+            <input id="grid" type="hidden" value="large">
             <div id="search-help">example searches</div>
             <div class="examples hidden">
                 <div><b>Note:</b> these example queries with extended syntax are currently only possible against treatments</div>
