removed page, size and grid from form

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="copyright" content="Puneet Kishor">
     <meta name="license" content="CC0 Public Domain Dedication">
     <meta name="repo" content="https://github.com/punkish/ocellus">
-    <meta name="date" content="Thu Mar 03 2022 22:00:32 GMT+0100 (Central European Standard Time)">
+    <meta name="date" content="Fri Mar 04 2022 10:43:36 GMT+0100 (Central European Standard Time)">
     <meta http-equiv="Cache-Control" content="max-age=604800, public">
 
     <title>ocellus^4</title>
@@ -57,9 +57,9 @@
                 <button type="submit" id="go">GO</button>
             </div>
             <div id="refreshCacheMsg" class="hidden">This will refresh the cache. You probably don’t want to do this.</div>
-            <input id="page" type="hidden" value="1">
+            <!-- <input id="page" type="hidden" value="1">
             <input id="size" type="hidden" value="30">
-            <input id="grid" type="hidden" value="large">
+            <input id="grid" type="hidden" value="large"> -->
             <div id="search-help">example searches</div>
             <div class="examples hidden">
                 <div><b>Note:</b> these example queries with extended syntax are currently only possible against treatments</div>
