added cache busting to js and css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="copyright" content="Puneet Kishor">
     <meta name="license" content="CC0 Public Domain Dedication">
     <meta name="repo" content="https://github.com/punkish/ocellus">
-    <meta name="date" content="Fri Mar 04 2022 10:43:36 GMT+0100 (Central European Standard Time)">
+    <meta name="date" content="Fri Mar 04 2022 21:06:14 GMT+0100 (Central European Standard Time)">
     <meta http-equiv="Cache-Control" content="max-age=604800, public">
 
     <title>ocellus^4</title>
@@ -17,7 +17,7 @@
     <link rel="icon" type="image/png" href="/img/ocellus.png">
 
     <link rel="stylesheet" href="/css/uglyduck.css">
-    <link rel="stylesheet" href="/css/ocellus.min.css">
+    <link rel="stylesheet" href="/css/ocellus-1646424374009.css">
     <link rel="stylesheet" href="/node_modules/@sn8z/pop-pop.css/dist/pop-pop.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css">
@@ -57,9 +57,7 @@
                 <button type="submit" id="go">GO</button>
             </div>
             <div id="refreshCacheMsg" class="hidden">This will refresh the cache. You probably don’t want to do this.</div>
-            <!-- <input id="page" type="hidden" value="1">
-            <input id="size" type="hidden" value="30">
-            <input id="grid" type="hidden" value="large"> -->
+            
             <div id="search-help">example searches</div>
             <div class="examples hidden">
                 <div><b>Note:</b> these example queries with extended syntax are currently only possible against treatments</div>
@@ -190,7 +188,7 @@
     <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
     <script src="https://unpkg.com/h3-js@3.7.2/dist/h3-js.umd.js"></script>
     <script type="module">
-        import { init } from './js/ocellus.js';
+        import { init } from './js/ocellus-1646424374009.js';
         window.onload = () => init();
     </script>
   </body>
