added page and size fields to the form

--- a/dev/index.html
+++ b/dev/index.html
@@ -64,6 +64,8 @@
                     </span>
                     <span id="clear-q" aria-label="clear input" data-pop="top" data-pop-no-shadow data-pop-arrow>&times;</span>
                 </div>
+                <input id="page" type="hidden" value="1">
+                <input id="size" type="hidden" value="30">
                 <button type="submit" id="go">GO</button>
             </div>
             <div id="refreshCacheMsg" class="hidden">This will refresh the cache. You probably don’t want to do this.</div>
