added moloch examples

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="copyright" content="Puneet Kishor">
     <meta name="license" content="CC0 Public Domain Dedication">
     <meta name="repo" content="https://github.com/punkish/ocellus">
-    <meta name="date" content="Sun Jul 03 2022 22:17:40 GMT+0200 (Central European Summer Time)">
+    <meta name="date" content="Mon Jul 04 2022 20:37:03 GMT+0200 (Central European Summer Time)">
     <meta http-equiv="Cache-Control" content="max-age=604800, public">
 
     <title>ocellus^4</title>
@@ -17,7 +17,7 @@
     <link rel="icon" type="image/png" href="/img/ocellus.png">
 
     <link rel="stylesheet" href="/css/uglyduck.css">
-    <link rel="stylesheet" href="/css/ocellus-1656879460366.css">
+    <link rel="stylesheet" href="/css/ocellus-1656959823998.css">
     <link rel="stylesheet" href="/node_modules/@sn8z/pop-pop.css/dist/pop-pop.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css">
@@ -75,6 +75,14 @@
                 <details>
                     <summary>tyrannosaurus&authorityName=Osborn</summary>
                     <p class="example-desc">text contains 'tyrannosaurus' and <i>authorityName</i> starts with 'Osborn' <button class="example-insert">try this search</button></p>
+                </details>
+                <details>
+                    <summary>family=Agamidae</summary>
+                    <p class="example-desc">images from treatments from family 'Agamidae' <button class="example-insert">try this search</button></p>
+                </details>
+                <details>
+                    <summary>moloch OR horridus</summary>
+                    <p class="example-desc">text contains 'moloch' OR 'horridus' <button class="example-insert">try this search</button></p>
                 </details>
             </div>
         </form>
@@ -191,7 +199,7 @@
     <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
     <script src="https://unpkg.com/h3-js@3.7.2/dist/h3-js.umd.js"></script>
     <script type="module">
-        import { init } from './js/ocellus-1656879460366.js';
+        import { init } from './js/ocellus-1656959823998.js';
         window.onload = () => init();
     </script>
   </body>
