--- a/dev/index.html
+++ b/dev/index.html
@@ -86,6 +86,14 @@
                     <summary>tyrannosaurus&authorityName=Osborn</summary>
                     <p class="example-desc">text contains 'tyrannosaurus' and <i>authorityName</i> starts with 'Osborn' <button class="example-insert">try this search</button></p>
                 </details>
+                <details>
+                    <summary>family=Agamidae</summary>
+                    <p class="example-desc">images from treatments from family 'Agamidae' <button class="example-insert">try this search</button></p>
+                </details>
+                <details>
+                    <summary>moloch OR horridus</summary>
+                    <p class="example-desc">text contains 'moloch' OR 'horridus' <button class="example-insert">try this search</button></p>
+                </details>
             </div>
         </form>
         
