removed node_modules dependencies

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="copyright" content="Puneet Kishor">
     <meta name="license" content="CC0 Public Domain Dedication">
     <meta name="repo" content="https://github.com/punkish/ocellus">
-    <meta name="date" content="Mon Jul 04 2022 20:37:03 GMT+0200 (Central European Summer Time)">
+    <meta name="date" content="Thu Jul 21 2022 22:05:28 GMT+0200 (Central European Summer Time)">
     <meta http-equiv="Cache-Control" content="max-age=604800, public">
 
     <title>ocellus^4</title>
@@ -17,8 +17,9 @@
     <link rel="icon" type="image/png" href="/img/ocellus.png">
 
     <link rel="stylesheet" href="/css/uglyduck.css">
-    <link rel="stylesheet" href="/css/ocellus-1656959823998.css">
-    <link rel="stylesheet" href="/node_modules/@sn8z/pop-pop.css/dist/pop-pop.min.css">
+    <link rel="stylesheet" href="/css/ocellus-1658433928560.css">
+    <!-- <link rel="stylesheet" href="/node_modules/@sn8z/pop-pop.css/dist/pop-pop.min.css"> -->
+    <link rel="stylesheet" href="/libs/pop-pop/pop-pop.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css">
@@ -193,13 +194,14 @@
     </footer>
     
     <script src="/js/config.js"></script>
-    <script src="/node_modules/picolog/dist/picolog.min.js"></script>
+    <!-- <script src="/node_modules/picolog/dist/picolog.min.js"></script> -->
+    <script src="/libs/picolog/picolog.min.js"></script>
     <script src="/libs/lazysizes.min.js"></script>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
     <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
     <script src="https://unpkg.com/h3-js@3.7.2/dist/h3-js.umd.js"></script>
     <script type="module">
-        import { init } from './js/ocellus-1656959823998.js';
+        import { init } from './js/ocellus-1658433928560.js';
         window.onload = () => init();
     </script>
   </body>
