--- a/dev/index.html
+++ b/dev/index.html
@@ -28,7 +28,8 @@
     <link rel="stylesheet" href="css/i-treatmentDetails.css">
     <link rel="stylesheet" href="css/i-media-queries.css">
     <!-- endbuild -->
-    <link rel="stylesheet" href="/node_modules/@sn8z/pop-pop.css/dist/pop-pop.min.css">
+    <!-- <link rel="stylesheet" href="/node_modules/@sn8z/pop-pop.css/dist/pop-pop.min.css"> -->
+    <link rel="stylesheet" href="/libs/pop-pop/pop-pop.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css">
@@ -203,7 +204,8 @@
     </footer>
     
     <script src="/js/config.js"></script>
-    <script src="/node_modules/picolog/dist/picolog.min.js"></script>
+    <!-- <script src="/node_modules/picolog/dist/picolog.min.js"></script> -->
+    <script src="/libs/picolog/picolog.min.js"></script>
     <script src="/libs/lazysizes.min.js"></script>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
     <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
