fixed broken ocellus.png

--- a/dev/index.html
+++ b/dev/index.html
@@ -14,7 +14,7 @@
 
     <title>ocellus^4</title>
 
-    <link rel="icon" type="image/png" href="/img/ocellus.png">
+    <link rel="icon" type="image/png" href="img/ocellus.png">
 
     <link rel="stylesheet" href="css/uglyduck.css">
     <!-- build:css -->
